fix(sso): 修复SSO登录流程中的重定向URI获取问题
refactor(keycloak): 优化Keycloak用户同步逻辑，增加密码同步功能

docs: 添加SSO和Keycloak接口文档

chore: 更新项目配置文件和文档，移除敏感信息

style: 统一输入框的autocomplete属性值为"nope"

perf: 移除背景装饰动画以提升性能

test: 添加SSO测试账号文档

ci: 更新docker-compose配置，添加Keycloak主题卷

build: 更新前端构建配置，添加版本号参数

--- a/ps-fe/public/index.html
+++ b/ps-fe/public/index.html
@@ -10,15 +10,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<!--<meta http-equiv="X-FRAME-OPTIONS" content="DENY">-->
-	<link rel="icon" href="<%= assetPrefix %>favicon.ico">
+	<link rel="icon" href="<%= assetPrefix %>/favicon.ico">
 	<title>中共陕西省委党校业务中台</title>
 	<!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
 
-	<script src="<%= assetPrefix %>config/index.js"></script>
+	<script src="<%= assetPrefix %>/config/index.js"></script>
 
 	<!--  plugins_head	-->
 	<script>
 		let BASE_URL = "<%= assetPrefix %>"
+	</script>
+	<script>
+		let PS_FE_VERSION = "<%= version %>"
 	</script>
 	<script>
 		<%= htmlWebpackPlugin.options.plugins_head %>
